--- a/style.css
+++ b/style.css
@@ -1,153 +1,40 @@
 @charset "UTF-8";
 /* CSS Document */
 
-
-body {
-	font: 100%/1.6  YuGothic, '游ゴシック', "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS P Gothic", sans-serif;
-	background-color: #fff;
-	margin: 0;
-	padding: 0;
-	color: #000;
-	border-style:none;
+body{
+    margin: 0;
 }
 
-a{
-	transition-property: all;
-	transition: 0.3s linear;
-	color: inherit;
-	text-decoration: none;
+.container {
+  width: 100vw;
+  height: 100vh;
 }
 
+.box {
 
-@import url('https://fonts.googleapis.com/css2?family=Didact+Gothic&display=swap');
-
-.wrapper{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-}
-
-.content{
-    width: 80%;
-}
-
-.head{
-    font-family: 'Didact Gothic', sans-serif;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin: 16px 0.65% 0 0.65%;
-}
-.head a:hover{opacity: 20%;}
-
-h1{
-    font-size: 1.5rem;
-    font-weight: normal;
-    letter-spacing: 0.15em;
-}
-
-h2{
-    font-size: 1.05rem;
-    font-weight: normal;
-    letter-spacing: 0.15em;
-    line-height: 1.6;
-}
-
-.btn{
-    margin: 6px 0 12px 0.65%;
-    font-size: 0.9em;
-    line-height: 2em;
-}
-.btn a{
-    margin-right:1em;
-    border-bottom: 2px solid #F4F4F4;
-    padding-bottom: 5px;
-}
-.btn a:hover{
-    border-bottom: 2px solid #000000; 
-}
-
-.thumbnail_wrapper{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-}
-
-.thumbnail{
-    width: 32%;
-    aspect-ratio: 4/3;
-    margin: 1% 0.65%;
-    border-bottom: 3px solid #F4F4F4;
-}
-
-.thumbnail:hover{
-    border-bottom: 3px solid #000000;
-}
-
-.thumbnail img{
+    background-image: url("topHaikei.jpg");
+    background-repeat: repeat-x;
+    background-size:contain;
   width: 100%;
-  object-fit: cover;
+  height: 80%;
 }
 
-.works_wrapper{
-    width: 700px;
-    margin: 0 auto;
+.inner{
+    width: auto;
+    height: 70%;
 }
-.works_wrapper img{
-    width: 100%;
-    height: auto;
-    padding: 1em 0;
+.inner img{
+    height: 100%;    
 }
-.works_wrapper p{
-    font-size: 0.8em;
-    line-height: 1.8;
-    color: #2F2F2F
+img {
+    transition: 1.0s ;
 }
-.title{
-    font-size: 1.1em;
-    margin: 1em 0 0.4em 0;
-}
-.info{
-    font-size: 0.8em;
-    color: #B0B0B0;
-    margin-bottom: 1em;
-}
-.back{
-    margin: 2em 0;
-    text-align: right;
-}
-.back:hover{opacity: 20%;}
-
-.foot{
-    font-size: 0.75em;
-    color:#505050;
-    text-align: right;
-    margin: 4em 0 2em 0;
+img:hover {
+    opacity: 0.5 ;
 }
 
-.prof{
-    text-align: center;
-    margin-top: 40px;
-
-}
-.prof img{
-    width: 270px;
-    height: auto;
-}
-
-@media screen and (max-width: 565px) {
-    
-    .content{width: 95%;}
-    
-    .thumbnail{width: 48%;}
-    
-    h1{font-size: 1.2rem;}
-    
-    .head{margin-top: 1em;}
-    
-    .works_wrapper{
-    width: 95%;
-    margin: 0 auto;
-}
-
+.container,.box{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
